--- a/model/datapreprocess.ipynb
+++ b/model/datapreprocess.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "3d2811bb",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "9d654985",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "(555, 700, 3)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "2a463372",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a022959f90>"
+       "<matplotlib.image.AxesImage at 0x1bc78aa1550>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "49484cad",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "(555, 700)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "37d8cdcc",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "       [ 93,  91,  91, ..., 112, 112, 112]], shape=(555, 700), dtype=uint8)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,17 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "032fdc08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a022d78550>"
+       "<matplotlib.image.AxesImage at 0x1bc7af0aad0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "acb4a824",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "array([[352,  38, 233, 233]], dtype=int32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "c86cac77",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "(np.int32(352), np.int32(38), np.int32(233), np.int32(233))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,17 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "42b52b51",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2a022dd2850>"
+       "<matplotlib.image.AxesImage at 0x1bc7af8df90>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "28d733c5",
    "metadata": {},
    "outputs": [
@@ -311,17 +311,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "1ec2d6f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29fd4acb390>"
+       "<matplotlib.image.AxesImage at 0x1bc0e136d50>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "ba6219af",
    "metadata": {},
    "outputs": [],
@@ -370,17 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "0693c8b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29fd4b4c2d0>"
+       "<matplotlib.image.AxesImage at 0x1bc0e787c50>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -402,17 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "47fab982",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29fd4a6c690>"
+       "<matplotlib.image.AxesImage at 0x1bc0e81e210>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -434,17 +434,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "6828e1d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29fd4ca9090>"
+       "<matplotlib.image.AxesImage at 0x1bc0e883110>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "f755c6c4",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "b8230f03",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "1089f636",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "a5be4938",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        " '../dataset/virat_kohli']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "a7ecc536",
    "metadata": {},
    "outputs": [],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "id": "ac3f89d9",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "afa1806d",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
        "  '../dataset/cropped/virat_kohli\\\\virat_kohli9.png']}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "4690c570",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "id": "2fcc3113",
    "metadata": {},
    "outputs": [],
@@ -867,17 +867,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "id": "f6f9ac8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29fd4d48190>"
+       "<matplotlib.image.AxesImage at 0x1bc0e673110>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "id": "5ee5a298",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
        " 'virat_kohli': 4}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "id": "51218b6f",
    "metadata": {},
    "outputs": [],
@@ -952,23 +952,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "80f0b3c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[100],\n",
-       "       [129],\n",
-       "       [140],\n",
-       "       ...,\n",
-       "       [237],\n",
-       "       [234],\n",
-       "       [232]], shape=(4096, 1), dtype=uint8)"
+       "4096"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 30,
    "id": "ab5c1a05",
    "metadata": {},
    "outputs": [
@@ -995,7 +989,7 @@
        "       [232]], shape=(4096, 1), dtype=uint8)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 31,
    "id": "1fe54eba",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1010,7 @@
        "2"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 32,
    "id": "8b98ce6e",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1031,7 @@
        "(187, 4096)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 33,
    "id": "2d772a32",
    "metadata": {
     "slideshow": {
@@ -1071,6 +1065,158 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fb74b8a",
+   "metadata": {},
+   "source": [
+    "split the data into traning and test set    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8137d931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cc94453",
+   "metadata": {},
+   "source": [
+    "Train with svm model using pipeline  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "02fa9e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7446808510638298"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe = Pipeline([('scaler', StandardScaler()), ('svc', SVC(kernel = 'rbf', C = 10))])\n",
+    "pipe.fit(X_train, y_train)\n",
+    "pipe.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9fd4cbb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.78      0.70      0.74        10\n",
+      "           1       0.60      0.75      0.67         8\n",
+      "           2       0.50      0.50      0.50         6\n",
+      "           3       0.89      0.73      0.80        11\n",
+      "           4       0.85      0.92      0.88        12\n",
+      "\n",
+      "    accuracy                           0.74        47\n",
+      "   macro avg       0.72      0.72      0.72        47\n",
+      "weighted avg       0.76      0.74      0.75        47\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pipe.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64410d93",
+   "metadata": {},
+   "source": [
+    "We shall use grid search for trying different methods with different parameters for finding the perfect model for trining "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5600ca20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6cdbc0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_params = {\n",
+    "    'svm': {\n",
+    "        'model': svm.SVC(gamma='auto',probability=True),\n",
+    "        'params' : {\n",
+    "            'svc__C': [1,10,100,1000],\n",
+    "            'svc__kernel': ['rbf','linear']\n",
+    "        }  \n",
+    "    },\n",
+    "    'random_forest': {\n",
+    "        'model': RandomForestClassifier(),\n",
+    "        'params' : {\n",
+    "            'randomforestclassifier__n_estimators': [1,5,10]\n",
+    "        }\n",
+    "    },\n",
+    "    'logistic_regression' : {\n",
+    "        'model': LogisticRegression(solver='liblinear',multi_class='auto'),\n",
+    "        'params': {\n",
+    "            'logisticregression__C': [1,5,10]\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e08d4b11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = []\n",
+    "best_estimators = {}\n",
+    "import pandas as pd\n",
+    "for algo, mp in model_params.items():\n",
+    "    pipe = make_pipeline(StandardScaler(), mp['model'])\n",
+    "    clf =  GridSearchCV(pipe, mp['params'], cv=5, return_train_score=False)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    scores.append({\n",
+    "        'model': algo,\n",
+    "        'best_score': clf.best_score_,\n",
+    "        'best_params': clf.best_params_\n",
+    "    })\n",
+    "    best_estimators[algo] = clf.best_estimator_"
    ]
   }
  ],
